ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.9
    • Affects Version/s: None
    • Component/s: Networking
    • None
    • Fully Compatible
    • ALL
    • Platform A (10/09/15)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      ➜  mongo git:(SERVER-20562-isolate) ✗ ulimit -n 20
      ➜  mongo git:(SERVER-20562-isolate) ✗  ./build/cached/mongo/executor/network_interface_asio_integration_test
      2015-09-24T11:52:29.721-0400 I -        [main] Using test fixture with connection string = localhost:27017                                                                                                         
      2015-09-24T11:52:29.727-0400 I -        [main] going to run suite: NetworkInterfaceASIOIntegrationTest                                                                                                             
      2015-09-24T11:52:29.727-0400 I -        [main]   going to run test: Ping                                                                                                                                           
      2015-09-24T11:52:29.728-0400 I EXECUTOR [main] got command result: RemoteResponse --  cmd:{ ok: 1.0 }                                                                                                              
      2015-09-24T11:52:29.729-0400 I -        [main]   going to run test: Timeouts                                                                                                                                       
      2015-09-24T11:52:29.730-0400 I EXECUTOR [main] got command result: RemoteResponse --  cmd:{ ok: 1, n: 1 }                                                                                                          
      2015-09-24T11:52:29.830-0400 I EXECUTOR [main] command failed: ExceededTimeLimit Operation timed out                                                                                                               
      2015-09-24T11:52:29.832-0400 I EXECUTOR [main] got command result: RemoteResponse --  cmd:{ waitedMS: 0, cursor: { id: 0, ns: "foo.bar", firstBatch: [ { _id: ObjectId('5601e2653fce5857f55913b3'), foo: 1 } ] }, \
      ok: 1.0 }                                                                                                                                                                                                          
      2015-09-24T11:52:29.833-0400 I -        [main]   going to run test: StressTest                                                                                                                                     
      2015-09-24T11:52:29.833-0400 I EXECUTOR [main] Random seed is -8804958031892225279                                                                                                                                 
      2015-09-24T11:52:29.833-0400 I EXECUTOR [main] Starting stress test...                                                                                                                                             
      2015-09-24T11:52:29.837-0400 W EXECUTOR [thread1] Failed to close AsyncStream: Bad file descriptor                                                                                                                 
      2015-09-24T11:52:29.838-0400 W EXECUTOR [thread1] Failed to close AsyncStream: Bad file descriptor                                                                                                                 
      2015-09-24T11:52:29.838-0400 W EXECUTOR [thread1] Failed to close AsyncStream: Bad file descriptor                                                                                                                 
      2015-09-24T11:52:29.838-0400 W EXECUTOR [thread1] Failed to close AsyncStream: Bad file descriptor                                                                                                                 
      2015-09-24T11:52:29.839-0400 W EXECUTOR [thread1] Failed to close AsyncStream: Bad file descriptor                                                                                                                 
      2015-09-24T11:52:29.839-0400 W EXECUTOR [thread1] Failed to close AsyncStream: Bad file descriptor                                                                                                                 
      2015-09-24T11:52:29.839-0400 W EXECUTOR [thread1] Failed to close AsyncStream: Bad file descriptor                                                                                                                 
      2015-09-24T11:52:29.839-0400 W EXECUTOR [thread1] Failed to close AsyncStream: Bad file descriptor                                                                                                                 
      2015-09-24T11:52:29.840-0400 F -        [thread1] Invalid access at address: 0                                                                                                                                     
      2015-09-24T11:52:29.853-0400 F -        [thread1] Got signal: 11 (Segmentation fault).                                                                                                                             
      

            Assignee:
            Adam Midvidy (Inactive)
            Reporter:
            Adam Midvidy (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: