SERVER-20611 work around asio returning invalid tcp::resolver::iterator instances when file descriptors are exhausted